Fixed the overflowed background and centered the search on the page

--- a/app/main.css
+++ b/app/main.css
@@ -21,6 +21,14 @@ h1.ui.header.h1 {
   align-items: center;
 }
 
+.ui.grid {
+  height: 100%;
+}
+
+.ui.menu {
+  overflow: hidden;
+}
+
 .app {
   height: 100%;
 }
